ORCJAVA-450
===========

  - Fix an issue with ORCJAVA-411 that used HTTP GET instead
    of HTTP POST for controller MAC address announcement -- 
    used when retrieving controller ID from a remote service
    (Juha Lindfors)


ORCJAVA-411
===========

  - Reapply ORCJAVA-411: Support for remote access proxy
    (complete changeset)


ORCJAVA-479
===========

  - Fix a deployer API compabitility issue in Vera
    TestDeployer in test suite (Juha Lindfors)


ORCJAVA-425
===========

  - Fix broken changes introduced to test suite in 
    mredeker/Controller_2_0_1_Beehive_Proxy branch, as 
    part of ORCJAVA-424  (Juha Lindfors)



Controller 2.1.1 (2015-02-12 Twin Galaxies)
===========================================

Bug Fixes:

  - Remerge issue ORCJAVA-392 to correctly
    include changes in UDP listener



Controller 2.1.0 (2015-01-20 Twin Galaxies)
===========================================

New Features:

  - EnOcean Implementation (Rainer Hitz, ORCJAVA-348)
  - Mi Casa Verde Vera Integration (Marcus Redeker, ORCJAVA-330, ORCJAVA-331)
  - Round robind database (RRD) integration for storing sensor
    data (Marcus Redeker, ORCJAVA-353, ORCJAVA-356)
  - EmonCMS integration for storing sensor data (Marcus Redeker, ORCJAVA-357)
  - ICT Protege integration (Tomas Morton, ORCJAVA-445)
  - WebConsole upgraded to version 2.1.2, fixes issues with stuck
    loading screen, label on/off states with switch sensors, and tweaks for
    Midori web browser (Richard Turner, WEBCONSOLE-57, WEBCONSOLE-59, 
    ORCJAVA-345, ORCJAVA-379)
  - Added DSC Security System (IT-100/EnvisaLink) integration - IP to serial 
    (Greg Rapp, Phil Taylor, ORCJAVA-302)
  - Lagarto server (panStamps) integration (Daniel Berenguer)
  - Support 'custom' sensor types with virtual commands (ORCJAVA-217)

  - ZWave:
     * Updated protocol stack (Rainer Hitz, ORCJAVA-440)

  - KNX: 
     * Added distinct levels for 'DIM' and 'SCALE' commands that allow